// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Grid Container Fluid width container 1`] = `
<GridContainerElement
  className="gc-grid-container"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  maxWidth="100%"
  type="fluid"
>
  <GridX>
    <Cell
      small={4}
      vertical={false}
    >
      cell
    </Cell>
    <Cell
      small={4}
      vertical={false}
    >
      cell
    </Cell>
    <Cell
      small={4}
      vertical={false}
    >
      cell
    </Cell>
  </GridX>
</GridContainerElement>
`;

exports[`Storyshots Grid Container Full width container 1`] = `
<GridContainerElement
  className="gc-grid-container"
  gutterSizes="0"
  maxWidth="100%"
  type="full"
>
  <GridX>
    <Cell
      small={4}
      vertical={false}
    >
      cell
    </Cell>
    <Cell
      small={4}
      vertical={false}
    >
      cell
    </Cell>
    <Cell
      small={4}
      vertical={false}
    >
      cell
    </Cell>
  </GridX>
</GridContainerElement>
`;

exports[`Storyshots Grid Container Width of the available space container 1`] = `
<GridContainerElement
  className="gc-grid-container"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  maxWidth="75rem"
>
  <GridX>
    <Cell
      small={4}
      vertical={false}
    >
      cell
    </Cell>
    <Cell
      small={4}
      vertical={false}
    >
      cell
    </Cell>
    <Cell
      small={4}
      vertical={false}
    >
      cell
    </Cell>
  </GridX>
</GridContainerElement>
`;
